--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
-  <title>Persistent Ember</title>
+  <title>My App</title>
 
   <link rel="stylesheet" href="/assets/app.css">
 
